client/src/App.css
/* Universal styling */
body{
  background-image: linear-gradient(to bottom right, rgb(24, 24, 24), rgb(73, 73, 73), rgb(24, 24, 24));
  margin: 0;
  margin: 0;
  height: 100vh;
  color: white;
}
a{
  text-decoration: none;
  color: green;
}

/* Elemental styling */
.home {
  text-align: center;
}
.container{
  display: block;
  margin: auto;
  padding: 1.25rem;
  width: 375px;
}
.about img{
  border-top-right-radius: 30px;
  border-bottom-left-radius: 30px;
  border-bottom-right-radius: 30px;
}

/* start of header / navigation */
.container img{
  border-radius: 40px;
}
.topnav {
  overflow: hidden;
  background-color: #FFF;
  border-radius: 4px;
}

.topnav a {
  float: left;
  color: black;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: black;
  color: White;
}

.topnav a.active {
  background-color: #04AA6D;
  color: white;
}

.topnav img{
  margin: 0.25rem 0 0 3.75rem;
}
.about h1{
    border-left: solid thick white;
    padding-left: 1.25rem;
}
/* Start of login form */
.login{
  border-radius: 10px;
  width: 375px;
  box-sizing: border-box;
  background-color: rgb(206, 206, 206);
  padding-right: 0.75rem;
}
.login #Username,.login #Password{
  padding: 0.75rem;
  margin: 0.5rem;
  width: 288px
}
.login #submit{
  padding: 0.75rem;
  border-radius: 5px;
  background-color: green;
  border: solid 2px green;
  color: white;
  margin: 0 0 0 0.5rem;
  width: 128px;
  margin-top: 1.25rem;
  font-weight: bolder;
}
.login #submit:hover{
  background-color: rgba(255, 255, 255, 0);
  color: green;
}
.forgot-password{
  margin-left:3.75rem;
}
.avatar-section{
  display: block;
  width: max-content;
  margin: auto;
  padding: 0.25rem;
}
/* End of Login form */


/* Sectional styling */
/* Banna section */
.bg-text{
  color: white;
  font-weight: bold;
  width: 300px;
  padding: 20px;
  height: 300px;
  border-top-right-radius: 30px;
  border-bottom-left-radius: 30px;
  border-bottom-right-radius: 30px;
}
.bg-text a{
  border: solid 2px white;
  color: white;
  padding: 0.5rem 1.25rem;
  text-align: center;
  border-radius: 10px;
  display: block;
  width: 60px;
}
/* Desktop styling */
@media screen and (min-width: 720px){
  .about img{
    float: left;
  }
  .right-side{
    float: right;
    width: 270px;
    margin: 0.25rem;
    
  }
  .container-banna{
    width: 720px;
    display: block;
    margin: auto;
  }
  .imagine{
    float: left;
  }
  .bg-text{
    float: right;
  }
  .bg-text h1{
    border-left: solid white 2px;
    padding-left: 0.5rem;
  }
  .leftSideBar{
    background-color: rgba(204, 204, 204, 0.664);
    margin-top: 0px;
    padding: 1.5rem;
    width: 200px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    height: 100%;
    float: left;
  }
  .leftSideBar img{
    border-radius: 50px;
  }
  .leftSideBar h2{
    display: inline;
    position: relative;
    top: -10px;
    left: 10px;
  }
  .leftSideBar .db{
    padding: 0.5rem;
    display: block;
    margin: auto;
    text-align: center;
    border: #FFF solid 2px;
    border-radius: 5px;
    color: white;
    margin-bottom: 1.75rem;
  }
  .leftSideBar .db:hover{
    background-color: white;
    color: black;
  }
  .leftSideBar a{
    padding: 0.5rem;
    display: block;
    margin: auto;
    text-align: center;
    color: white;
    border-bottom: solid 1px white;
  }
  .leftSideBar .logout{
    color: white;
    background-color: rgba(179, 0, 0, 0.733);
    border: none;
    border-radius: 5px;
    margin-top: 325px;
  }
  .dashboard-frame{
    width: 80vw;
    height: 90vh;
    box-sizing: border-box;
    margin: auto;
    display: block;
    margin-top: 3rem;
  }
  .inventory-section{
    background-color: rgba(255, 255, 255, 0.829);
    float: left;
    width: 80%;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    height: 653px;
  }
  .inventory-overview{
    display: flex;
  }
  .inventory-overview > div {
    background-color: #292929;
    margin: 10px;
    padding: 20px 15px;
    color: white;
    border-radius: 5px;
    width: 200px;
  }
  .inventory-overview > div > a{
    display: inline;
    color: greenyellow;
    display: block;
  }
  .dashboard-title{
    padding: 0px 20px;
    color: black;
  }
  .inventory-overview span{
    color: white;
  }
  .sales-section{
    float: left;
  }
}
@media screen and (min-width: 480px) {
  .clear-fix{
    clear: both;
    content: "";
  }
  .container-about{
    width: 600px;
    display: block;
    margin: auto;
  }
  .right-side a{
    border: solid 2px white;
    color: white;
    padding: 0.5rem 1.25rem;
    text-align: center;
    border-radius: 10px;
    display: block;
    width: 60px;
  }
  .inventory-section{
    float: left;
  }
}

/* Mobile styling */
@media screen and (max-width: 719px) {
  .container-about{
    display: block;
    width: 300px;
    margin: auto;
  }
  .bg-text{
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0, 0, 0, 0.404); /* Black w/opacity/see-through */
    color: white;
    font-weight: bold;
    position: absolute;
    top: 278px;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    width: 280px;
    padding: 20px;
    height: 280px;
    border-top-right-radius: 30px;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
  }
  .imagine{
    float: none;
    margin: auto;
    display: block;
  }
}
@media screen and (max-width: 480px) {
  .login{
    margin-top: 6rem;
  }
  .container{
    width: 320px;
  }
  .login #Username,.login #Password{
    width: 235px;
  }
  .forgot-password{
    margin-left:0.5rem;
  }
  .topnav img{
    margin: 0.25rem 0 0 1.75rem;
  }
  .right-side a{
    border: solid 2px white;
    color: white;
    padding: 0.5rem 1.25rem;
    text-align: center;
    border-radius: 10px;
    display: block;
    width: 60px;
  }
  
}

